hphp/hack/test/typecheck/uninstantiable_anon_return3.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

trait T {}

class C {
  use T;
}

function foo(): void {
  $_ = function(): T {
    return new C();
  };
}
